--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,9 @@
 /* Estilização das páginas */
 .App{
-    background-color: rgb(231, 231, 231);
+    background-color: #1f2d3a;
     min-height: 100%;
 }
+
 
 /* Estilização das mensagens de erro */
 .error{
