alterações na tela de cadastro e login

--- a/client/src/pages/Cadastro.module.css
+++ b/client/src/pages/Cadastro.module.css
@@ -1,4 +1,4 @@
-.pageCadastro {
+/* .pageCadastro {
   height: 100vh;
   display: flex;
   align-items: center;
@@ -83,4 +83,4 @@
   color: #4a90e2;
   cursor: pointer;
   text-decoration: underline;
-}
+} */
