--- a/client/src/components/BarraNavegacao/BarraNavegacao.module.css
+++ b/client/src/components/BarraNavegacao/BarraNavegacao.module.css
@@ -4,7 +4,7 @@
 
 /* 🌞 Tema Claro (padrão) */
 :root {
-  --navbar-bg: #ffffff;
+  --navbar-bg: #5CA4D6;
   --navbar-text: #212529;
   --navbar-hover: #0d6efd;
   --dropdown-bg: #ffffff;
@@ -16,7 +16,7 @@
 
 /* 🌙 Tema Escuro */
 [data-theme="dark"] {
-  --navbar-bg: #212529;
+  --navbar-bg: #326789;
   --navbar-text: #ffffff;
   --navbar-hover: #0d6efd;
   --dropdown-bg: #2b2b2b;
@@ -182,3 +182,4 @@
 span {
   color: var(--navbar-text); /* Título no DarkMode  */
 }
+
